feat: add claude to workspace casks in packages.yaml

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -83,6 +83,7 @@ packages:
           - "bartender"
           - "beekeeper-studio"
           - "betterdisplay"
+          - "claude"
           - "ghostty"
           - "handbrake"
           - "rectangle-pro"
