--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -198,5 +198,9 @@
     "gitlens.ai.vscode.model": "copilot:claude-3.7-sonnet",
     "chat.agent.enabled": true,
     "docker.lsp.telemetry": "off",
-    "gitlens.telemetry.enabled": false
+    "gitlens.telemetry.enabled": false,
+    "workbench.colorTheme": "Visual Studio Dark",
+    "window.autoDetectColorScheme": true,
+    "workbench.preferredDarkColorTheme": "Visual Studio Dark",
+    "workbench.preferredLightColorTheme": "Visual Studio Light"
 }
