--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -201,6 +201,5 @@
     "gitlens.telemetry.enabled": false,
     "workbench.colorTheme": "Visual Studio Dark",
     "window.autoDetectColorScheme": true,
-    "workbench.preferredDarkColorTheme": "Visual Studio Dark",
-    "workbench.preferredLightColorTheme": "Visual Studio Light"
+    "window.systemColorTheme": "auto"
 }
