feat: remove specific color theme settings and retain auto detection

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -199,7 +199,5 @@
     "chat.agent.enabled": true,
     "docker.lsp.telemetry": "off",
     "gitlens.telemetry.enabled": false,
-    "workbench.colorTheme": "Visual Studio Dark",
-    "window.autoDetectColorScheme": true,
-    "window.systemColorTheme": "auto"
+    "window.autoDetectColorScheme": true
 }
