feat: add 'cursor' to the list of installed casks

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -84,6 +84,7 @@ packages:
           - "beekeeper-studio"
           - "betterdisplay"
           - "claude"
+          - "cursor"
           - "ghostty"
           - "handbrake"
           - "rectangle-pro"
