--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -88,6 +88,7 @@ packages:
           - "ghostty"
           - "handbrake"
           - "rectangle-pro"
+          - "sf-symbols"
           - "yaak"
         mas:
           - id: 1352778147
