feat: add daisydisk on kholisrag workspaces

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -85,6 +85,7 @@ packages:
           - "betterdisplay"
           - "claude"
           - "cursor"
+          - "daisydisk"
           - "ghostty"
           - "handbrake"
           - "rectangle-pro"
