feat: add aldente kholisrag

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -80,6 +80,7 @@ packages:
         brews:
           - "ansible"
         casks:
+          - "aldente"
           - "bartender"
           - "beekeeper-studio"
           - "betterdisplay"
