feat: sync code settings

--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -109,10 +109,7 @@
     "vsicons.dontShowNewVersionMessage": true,
     "editor.inlineSuggest.enabled": true,
     "github.copilot.enable": {
-        "*": true,
-        "plaintext": true,
-        "markdown": true,
-        "scminput": false
+        "*": false
     },
     "terminal.integrated.showExitAlert": false,
     "actionButtons": {
