feat: add pyenv

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -40,6 +40,7 @@ packages:
         - "mkcert"
         - "oven-sh/bun/bun"
         - "pinentry-mac"
+        - "pyenv"
         - "qemu"
         - "sops"
         - "stern"
