--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -7,6 +7,7 @@ packages:
         - "goreleaser/tap"
         - "oven-sh/bun"
         - "xcodesorg/made"
+        - "slp/krun"
 
       brews:
         - "age"
@@ -80,6 +81,10 @@ packages:
       - name: "kholisrag"
         brews:
           - "ansible"
+          - "buildah"
+          - "libkrunfw"
+          - "libkrun"
+          - "krunvm"
         casks:
           - "aldente"
           - "beekeeper-studio"
