feat: add ima-additional-guestagents

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -36,6 +36,7 @@ packages:
         - "kubernetes-cli"
         - "lefthook"
         - "lima"
+        - "lima-additional-guestagents"
         - "lychee"
         - "mas"
         - "mkcert"
