--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -31,6 +31,7 @@ packages:
         - "go@1.23"
         - "go-task"
         - "goreleaser/tap/goreleaser"
+        - "graphviz"
         - "helm"
         - "hugo"
         - "kubernetes-cli"
@@ -63,7 +64,7 @@ packages:
       casks:
         - "cloudflare-warp"
         - "displaylink"
-        - "docker"
+        - "docker-desktop"
         - "font-hack-nerd-font"
         - "font-meslo-lg-nerd-font"
         - "gitify"
@@ -76,7 +77,7 @@ packages:
         - "rambox"
         - "visual-studio-code"
         - "vlc"
-        - "xcodes"
+        - "xcodes-app"
 
     workspaces:
       - name: "kholisrag"
