fix: fix broken goreleaser

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -30,7 +30,7 @@ packages:
         - "go@1.22"
         - "go@1.23"
         - "go-task"
-        - "goreleaser/tap/goreleaser"
+        # - "goreleaser/tap/goreleaser"
         - "graphviz"
         - "helm"
         - "hugo"
@@ -70,6 +70,7 @@ packages:
         - "gitify"
         - "google-chrome"
         - "google-cloud-sdk"
+        - "goreleaser"
         - "iterm2"
         - "magicquit"
         - "only-switch"
