feat: add go-task to brew and workspace configurations

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,6 +6,7 @@ packages:
         - "derailed/k9s"
         - "golangci/tap"
         - "goreleaser/tap"
+        - "go-task/tap"
         - "oven-sh/bun"
         - "th-ch/youtube-music"
         - "xcodesorg/made"
@@ -88,6 +89,7 @@ packages:
           - "ansible"
           # - "buildah"
           - "golangci/tap/golangci-lint"
+          - "go-task/tap/go-task"
           # - "libkrunfw"
           # - "libkrun"
           # - "krunvm"
