feat: add syft and trivy to package list + update augment user guidelines in settings.json

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -50,11 +50,13 @@ packages:
         - "qemu"
         - "sops"
         - "stern"
+        - "syft"
         - "tenv"
         - "thefuck"
         - "tldr"
         - "tmux"
         - "tree"
+        - "trivy"
         - "typos-cli"
         - "uv"
         - "vim"
