feat: add raspberry-pi-imager to laku6 package list

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -106,6 +106,7 @@ packages:
           - "ghostty"
           - "handbrake"
           - "podman-desktop"
+          - "raspberry-pi-imager"
           - "rectangle-pro"
           - "sf-symbols"
           - "th-ch/youtube-music/youtube-music"
