feat: add balenaetcher to laku6 cask list

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -98,6 +98,7 @@ packages:
           - "podman"
         casks:
           - "aldente"
+          - "balenaetcher"
           - "beekeeper-studio"
           - "betterdisplay"
           - "claude"
