feat: add clover-configurator to laku6 cask list

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -103,6 +103,7 @@ packages:
           - "betterdisplay"
           - "claude"
           - "cursor"
+          - "clover-configurator"
           - "daisydisk"
           - "ghostty"
           - "handbrake"
