feat: replace clover-configurator with opencore-configurator

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -103,10 +103,11 @@ packages:
           - "betterdisplay"
           - "claude"
           - "cursor"
-          - "clover-configurator"
+          # - "clover-configurator"
           - "daisydisk"
           - "ghostty"
           - "handbrake"
+          - "opencore-configurator"
           - "podman-desktop"
           - "raspberry-pi-imager"
           - "rectangle-pro"
