feat: add ansible-lint

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -89,6 +89,7 @@ packages:
       - name: "kholisrag"
         brews:
           - "ansible"
+          - "ansible-lint"
           # - "buildah"
           - "golangci/tap/golangci-lint"
           - "go-task/tap/go-task"
