fix: fix goreleaser

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -5,7 +5,6 @@ packages:
         - "cloudflare/cloudflare"
         - "derailed/k9s"
         - "golangci/tap"
-        # - "goreleaser/tap"
         - "go-task/tap"
         - "oven-sh/bun"
         - "th-ch/youtube-music"
@@ -33,7 +32,6 @@ packages:
         - "go@1.22"
         - "go@1.23"
         - "go-task"
-        # - "goreleaser/tap/goreleaser"
         - "graphviz"
         - "helm"
         - "hugo"
@@ -75,7 +73,7 @@ packages:
         - "gitify"
         - "google-chrome"
         - "gcloud-cli"
-        - "goreleaser"
+        - "goreleaser/tap/goreleaser"
         - "iterm2"
         - "magicquit"
         - "only-switch"
