--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -105,7 +105,7 @@ packages:
           - "cursor"
           # - "clover-configurator"
           - "daisydisk"
-          - "ghostty"
+          # - "ghostty"
           - "handbrake"
           - "opencore-configurator"
           - "podman-desktop"
