--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -69,7 +69,7 @@ app-notifications = config-reload
 clipboard-read = allow
 clipboard-write = allow
 macos-window-buttons = visible
-macos-titlebar-style = tabs
+macos-titlebar-style = native
 macos-window-shadow = true
 macos-auto-secure-input = true
 macos-icon = official
