feat: add loopback

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -107,6 +107,7 @@ packages:
           - "daisydisk"
           - "ghostty"
           - "handbrake"
+          - "loopback"
           - "opencore-configurator"
           - "podman-desktop"
           - "raspberry-pi-imager"
