chore: comment deprecated youtube-music

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -113,7 +113,7 @@ packages:
           - "raspberry-pi-imager"
           - "rectangle-pro"
           - "sf-symbols"
-          - "th-ch/youtube-music/youtube-music"
+          # - "th-ch/youtube-music/youtube-music"
           # - "wezterm"
           - "yaak"
         mas:
