fix: fix after try on fresh macos tahoe install

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -7,7 +7,7 @@ packages:
         - "golangci/tap"
         - "go-task/tap"
         - "oven-sh/bun"
-        - "th-ch/youtube-music"
+        # - "th-ch/youtube-music"
         - "xcodesorg/made"
         # - "slp/krun"
 
