chore: change to active handbrake-app

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -106,7 +106,7 @@ packages:
           # - "clover-configurator"
           - "daisydisk"
           - "ghostty"
-          - "handbrake"
+          - "handbrake-app"
           - "loopback"
           - "opencore-configurator"
           # - "podman-desktop"
