feat: add cleanshot

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -101,6 +101,7 @@ packages:
           - "balenaetcher"
           - "beekeeper-studio"
           - "betterdisplay"
+          - "cleanshot"
           - "claude"
           - "cursor"
           # - "clover-configurator"
