feat: disable cursor + claude for now

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -102,8 +102,8 @@ packages:
           - "beekeeper-studio"
           - "betterdisplay"
           - "cleanshot"
-          - "claude"
-          - "cursor"
+          # - "claude"
+          # - "cursor"
           # - "clover-configurator"
           - "daisydisk"
           - "ghostty"
