feat: add tools for cleaning pearcleaner onyx

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -109,7 +109,9 @@ packages:
           - "ghostty"
           - "handbrake-app"
           - "loopback"
+          - "onyx"
           - "opencore-configurator"
+          - "pearcleaner"
           # - "podman-desktop"
           - "raspberry-pi-imager"
           - "rectangle-pro"
