feat: adding talosctl

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -8,6 +8,7 @@ packages:
         - "go-task/tap"
         - "oven-sh/bun"
         # - "th-ch/youtube-music"
+        - "siderolabs/tap"
         - "xcodesorg/made"
         # - "slp/krun"
 
@@ -30,8 +31,7 @@ packages:
         - "gitleaks"
         - "gnupg"
         - "go"
-        - "go@1.22"
-        - "go@1.23"
+        - "go@1.24"
         - "go-task"
         - "graphviz"
         - "helm"
@@ -52,7 +52,7 @@ packages:
         - "syft"
         - "tenv"
         - "thefuck"
-        - "tldr"
+        - "tlrc"
         - "tmux"
         - "tree"
         - "trivy"
@@ -97,6 +97,7 @@ packages:
           # - "libkrun"
           # - "krunvm"
           # - "podman"
+          - "siderolabs/tap/talosctl"
           - "terraform-docs"
         casks:
           - "aldente"
