feat: add antigravity

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -101,6 +101,7 @@ packages:
           - "terraform-docs"
         casks:
           - "aldente"
+          - "antigravity"
           - "balenaetcher"
           - "beekeeper-studio"
           - "betterdisplay"
