feat: add antigravity to laku6

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -159,6 +159,7 @@ packages:
           - "pyenv-virtualenv"
           - "helmfile"
         casks:
+          - "antigravity"
           - "dbeaver-community"
           - "flameshot"
           - "jordanbaird-ice"
