feat: reactivate claude

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -92,6 +92,7 @@ packages:
           - "ansible-lint"
           # - "buildah"
           - "fastfetch"
+          - "fluxcd/tap/flux"
           - "golangci/tap/golangci-lint"
           - "go-task/tap/go-task"
           # - "libkrunfw"
@@ -107,11 +108,10 @@ packages:
           - "beekeeper-studio"
           - "betterdisplay"
           - "cleanshot"
-          # - "claude"
+          - "claude"
           # - "cursor"
           # - "clover-configurator"
           - "daisydisk"
-          - "fluxcd/tap/flux"
           - "ghostty"
           - "handbrake-app"
           - "loopback"
