feat: tidy up packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -19,6 +19,7 @@ packages:
         - "atuin"
         - "awscli"
         - "bat"
+        - "bd"
         - "chezmoi"
         - "cloudflared"
         - "coreutils"
@@ -27,6 +28,7 @@ packages:
         - "dive"
         - "doggo"
         - "fzf"
+        - "gemini-cli"
         - "gh"
         - "git"
         - "git-filter-repo"
@@ -68,19 +70,25 @@ packages:
         - "zoxide"
 
       casks:
+        - "antigravity"
+        - "claude"
+        - "claude-code"
         - "cloudflare-warp"
         - "displaylink"
         - "docker-desktop"
         - "font-hack-nerd-font"
         - "font-meslo-lg-nerd-font"
         - "gitify"
+        - "ghostty"
         - "google-chrome"
         - "gcloud-cli"
         - "goreleaser/tap/goreleaser"
         - "iterm2"
         - "magicquit"
         - "only-switch"
+        - "onyx"
         - "openinterminal"
+        - "pearcleaner"
         - "rambox"
         - "visual-studio-code"
         - "vlc"
@@ -91,7 +99,6 @@ packages:
         brews:
           - "ansible"
           - "ansible-lint"
-          - "bd"
           # - "buildah"
           - "fastfetch"
           - "fluxcd/tap/flux"
@@ -105,24 +112,18 @@ packages:
           - "terraform-docs"
         casks:
           - "aldente"
-          - "antigravity"
           - "balenaetcher"
           - "beekeeper-studio"
           - "betterdisplay"
           - "cleanshot"
-          - "claude"
-          - "claude-code"
           # - "cursor"
           # - "clover-configurator"
           - "daisydisk"
-          - "ghostty"
           - "gitkraken"
           - "handbrake-app"
           - "loopback"
           - "mitmproxy"
-          - "onyx"
           - "opencore-configurator"
-          - "pearcleaner"
           # - "podman-desktop"
           - "raspberry-pi-imager"
           - "rectangle-pro"
@@ -167,7 +168,6 @@ packages:
           - "pyenv-virtualenv"
           - "helmfile"
         casks:
-          - "antigravity"
           - "dbeaver-community"
           - "flameshot"
           - "jordanbaird-ice"
