fix: try fixing bd install

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -19,7 +19,6 @@ packages:
         - "atuin"
         - "awscli"
         - "bat"
-        - "bd"
         - "bitwarden-cli"
         - "chezmoi"
         - "cloudflared"
@@ -54,6 +53,7 @@ packages:
         - "qemu"
         - "sops"
         - "stern"
+        - "steveyegge/beads/bd"
         - "syft"
         - "tenv"
         - "thefuck"
