--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -66,7 +66,7 @@ packages:
         - "vim"
         - "watch"
         - "watchman"
-        - "xcodesorg/made/xcodes"
+        - "xcodes"
         - "yq"
         - "zoxide"
 
