--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -184,6 +184,7 @@ packages:
       - name: "kloia"
         brews: []
         casks:
+          - "bitwarden"
           - "dbeaver-community"
           - "flameshot"
           - "jordanbaird-ice"
