feat: add aws-vpn-client

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -184,6 +184,7 @@ packages:
       - name: "kloia"
         brews: []
         casks:
+          - "aws-vpn-client"
           - "bitwarden"
           - "dbeaver-community"
           - "flameshot"
