feat: add obs-backgroundremoval

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -87,6 +87,7 @@ packages:
         - "iterm2"
         - "magicquit"
         - "obs"
+        - "obs-backgroundremoval"
         - "only-switch"
         - "onyx"
         - "openinterminal"
