--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -189,6 +189,7 @@ packages:
           - "aws-vpn-client"
           - "bitwarden"
           - "dbeaver-community"
+          - "deepl"
           - "flameshot"
           - "jordanbaird-ice"
           - "kap"
