--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -40,6 +40,7 @@ packages:
         - "graphviz"
         - "helm"
         - "hugo"
+        - "krew"
         - "kubernetes-cli"
         - "lefthook"
         - "lima"
