feat: update beads gastown

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -9,7 +9,6 @@ packages:
         - "oven-sh/bun"
         # - "th-ch/youtube-music"
         - "siderolabs/tap"
-        - "steveyegge/beads"
         - "xcodesorg/made"
         # - "slp/krun"
 
@@ -19,6 +18,7 @@ packages:
         - "atuin"
         - "awscli"
         - "bat"
+        - "beads"
         - "beads_viewer"
         - "bitwarden-cli"
         - "chezmoi"
@@ -29,6 +29,7 @@ packages:
         - "dive"
         - "doggo"
         - "fzf"
+        - "gastown"
         - "gemini-cli"
         - "gh"
         - "git"
@@ -55,7 +56,6 @@ packages:
         - "qemu"
         - "sops"
         - "stern"
-        - "steveyegge/beads/bd"
         - "syft"
         - "tenv"
         - "thefuck"
