feat: add battery-toolkit

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,6 +6,7 @@ packages:
         - "derailed/k9s"
         - "golangci/tap"
         - "go-task/tap"
+        - "mhaeuser/mhaeuser"
         - "oven-sh/bun"
         # - "th-ch/youtube-music"
         - "siderolabs/tap"
@@ -197,6 +198,7 @@ packages:
           - "kap"
           - "kubecontext"
           - "maccy"
+          - "mhaeuser/mhaeuser/battery-toolkit"
           - "monitorcontrol"
           - "rectangle"
           - "slack"
