--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -69,6 +69,7 @@ packages:
         - "vim"
         - "watch"
         - "watchman"
+        - "witr"
         - "xcodes"
         - "yq"
         - "zoxide"
