feat: initiate lazyvim

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -29,6 +29,7 @@ packages:
         - "derailed/k9s/k9s"
         - "dive"
         - "doggo"
+        - "fd"
         - "fzf"
         - "gastown"
         - "gemini-cli"
@@ -45,6 +46,7 @@ packages:
         - "hugo"
         - "krew"
         - "kubernetes-cli"
+        - "lazygit"
         - "lefthook"
         - "lima"
         - "lima-additional-guestagents"
@@ -56,6 +58,7 @@ packages:
         - "pinentry-mac"
         # - "pyenv"
         - "qemu"
+        - "ripgrep"
         - "sops"
         - "stern"
         - "syft"
