feat: init lazyvim config

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -16,6 +16,7 @@ packages:
       brews:
         - "act"
         - "age"
+        - "ast-grep"
         - "atuin"
         - "awscli"
         - "bat"
@@ -34,6 +35,7 @@ packages:
         - "gastown"
         - "gemini-cli"
         - "gh"
+        - "ghostscript"
         - "git"
         - "git-filter-repo"
         - "gitleaks"
@@ -44,14 +46,17 @@ packages:
         - "graphviz"
         - "helm"
         - "hugo"
+        - "imagemagick"
         - "krew"
         - "kubernetes-cli"
         - "lazygit"
         - "lefthook"
         - "lima"
         - "lima-additional-guestagents"
+        - "luarocks"
         - "lychee"
         - "mas"
+        - "mermaid-cli"
         - "mkcert"
         - "neovim"
         - "oven-sh/bun/bun"
@@ -62,6 +67,7 @@ packages:
         - "sops"
         - "stern"
         - "syft"
+        - "tectonic"
         - "tenv"
         - "thefuck"
         - "tlrc"
