feat: add codexbar

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -109,6 +109,7 @@ packages:
         - "openinterminal"
         - "pearcleaner"
         - "rambox"
+        - "steipete/tap/codexbar"
         - "visual-studio-code"
         - "vlc"
         - "xcodes-app"
