--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -205,6 +205,7 @@ packages:
       - name: "kloia"
         brews:
           - "aws/tap/eks-node-viewer"
+          - "kustomize"
           - "pipx"
           - "turbot/tap/steampipe"
         casks:
