feat: add obsidian

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -145,6 +145,7 @@ packages:
           - "handbrake-app"
           - "loopback"
           - "mitmproxy"
+          - "obsidian"
           - "opencore-configurator"
           # - "podman-desktop"
           - "raspberry-pi-imager"
