feat: add session-manager-plugin

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -225,6 +225,7 @@ packages:
           - "mhaeuser/mhaeuser/battery-toolkit"
           - "monitorcontrol"
           - "rectangle"
+          - "session-manager-plugin"
           - "slack"
           - "utm"
         mas: []
